--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Wine Maker For A Day: Signup</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.png?v=2">
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
 <body></body>
